# Chess-Kepler-Engine

./: CMakeLists.txt  README.md
src/: main.cpp
src/board/: board.cpp  board.h
src/eval/standard/: eval_masks.h  evaluate_position.cpp  evaluate_position.h
src/hashing/: zobrist.cpp  zobrist.h
src/movegen/: generate_moves.cpp.cpp  generate_moves.h  legal_test.cpp  masks.cpp
src/moves/: flag.h  pv.h  to_string.cpp  to_string.h
src/moves/standard/: move.h
src/moves/tar/: move.cpp  move.h
src/search/: search.cpp  search.h
src/search/standard/: minimax.cpp  minimax.h
src/search/tar/: minimax.cpp  minimax.h
src/time/: time_manager.cpp  time_manager.h
src/tt/: tt.cpp  tt.h
src/uci/: uci.cpp  uci.h
src/utills/: bit_fun.h
src/utils/: bit_fun.h
